# gazebo_ros_demos

./: README.md  setspeed.sh
car_control/: CMakeLists.txt  package.xml
car_control/config/: car_control.yaml
car_control/launch/: car_control.launch
car_description/: CMakeLists.txt  package.xml
car_description/nodes/: drive_car
car_description/urdf/: car.xacro
rrbot_control/config/: rrbot_control.yaml
rrbot_control/launch/: rrbot_control.launch
rrbot_description/: CMakeLists.txt  package.xml
rrbot_description/launch/: rrbot_root_tf.launch
rrbot_description/nodes/: fake_visual_detector  publish_root_tf  remote_controller
rrbot_description/urdf/: rrbot.xacro
rrbot_gazebo/: package.xml
rrbot_gazebo/launch/: rrbot_rviz.launch  rrbot_world.launch
rrbot_gazebo/worlds/: rrbot.world
